--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,27 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 google-ai-generativelanguage==0.3.3
 google-api-core==2.14.0
+google-api-python-client==2.109.0
 google-auth==2.24.0
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==1.1.0
 google-generativeai==0.2.2
 googleapis-common-protos==1.61.0
 grpcio==1.59.3
 grpcio-status==1.59.3
+httplib2==0.22.0
 idna==3.6
+oauthlib==3.2.2
 pip==22.2.2
 proto-plus==1.22.3
 protobuf==4.25.1
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pyparsing==3.1.1
 requests==2.31.0
+requests-oauthlib==1.3.1
 rsa==4.9
 setuptools==63.2.0
 tqdm==4.66.1
+uritemplate==4.1.1
 urllib3==2.1.0
